@@ -1,4 +1,6 @@
 v1.4, not yet released
+  * if the script exits unexpectedly, log the reason for the exit in
+    the bailout message ("unexpected early exit" or signal name)
   * fix t4s_esc() to properly escape arguments with trailing newlines
   * print "command not found" if t4s_subtests() is given an invalid
     command
